feat: employee self-service, AI ranking refactor, security hardening
Employee self-service endpoints (EMPLOYEE role):
- GET /api/employees/me, /api/tasks/me, /api/attendance/me
- PATCH /api/tasks/{id}/status (only own tasks)
- POST /api/attendance/me/checkin & /me/checkout
- New CurrentUserService resolves Employee from JWT

AI suggestion refactor:
- Remove rule-based scoring; AI ranks based on raw historical data
  (past task progress, completion timing, attendance) — no more skill matching
- Throw BusinessException when OPENAI_API_KEY unset (no fallback)
- Simplify EmployeeSuggestionDTO to rank + reasoning (no numeric scores)
- Drop requiredSkills from SuggestionRequest
- Delete unused Skill entity + SkillRepository
- Frontend redesign: hero gradient, avatar initials, top-3 medals,
  quote-style reasoning, fade-in stagger animation

Security & quality:
- Remove RCE risk in RedisConfig (NON_FINAL default typing)
- Require JWT_SECRET and ADMIN_PASSWORD env vars (drop weak defaults)
- CORS: whitelist headers, drop allowCredentials
- ON DELETE CASCADE on Task/Attendance FKs
- @Transactional(readOnly=true) on read methods
- @NotBlank validation on SuggestionRequest
- Normalize task status filter to lowercase